# EmitEnumFromNamspaceTest

./: CMakeLists.txt  MetaRegister.cpp  MetaRegister.h  Readme.md  Receiver.h  Sender.cpp  Sender.h  main.cpp
